--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ six==1.16.0
 sklearn==0.0.post1
 smmap==5.0.0
 streamlit==1.19.0
+streamlit-folium==0.11.1
 tenacity==8.2.1
 threadpoolctl==3.1.0
 toml==0.10.2
